--- a/web/ja/tutorial/handson/section10.html
+++ b/web/ja/tutorial/handson/section10.html
@@ -216,10 +216,10 @@
 <span class="keyword">create index</span> IX_MEMBER_FOLLOWING_FOLLOW_DATETIME <span class="keyword">on</span> MEMBER_FOLLOWING(FOLLOW_DATETIME);
 </code></pre>
 	<p>
-		会員フォローイングのデータは以下の通り、20-member.xlsに新しいシートを作って、全てのセルを文字列型にしてから、コピーで貼付けましょう。
-		<span class="frm">(Chromeだとそのまま貼付けられないという報告あり、一度テキストに貼付けてから、そのテキスト上でもう一度コピーすればOKという報告あり)</span>
+		会員フォローイングのデータは以下の通り、playsql/data/ut/reversetsv/UTF-8/cyclic_02_07-member_following.tsv を作成してコピーで貼付けましょう。
+		<span class="frm">(テストデータのファイル形式、以前はエクセルでしたがTSVに変更しました。エクセルのままの方は既存ファイルの 20-member.xls となります)</span>
 	</p>
-<pre><span class="codetitle">会員フォローイングのデータ (エクセルにそのまま貼れるようにとタブ区切り) @20-member.xls</span><code>
+<pre><span class="codetitle">会員フォローイングのデータ (タブ区切り) @cyclic_02_07-member_following.tsv</span><code>
 MEMBER_FOLLOWING_ID	MY_MEMBER_ID	YOUR_MEMBER_ID	FOLLOW_DATETIME
 1	1	2	2006/12/24 23:59:59
 2	1	3	2007/11/11 16:16:16
