migrate XLS to TSV of hands-on test data

--- a/web/ja/tutorial/handson/section02.html
+++ b/web/ja/tutorial/handson/section02.html
@@ -61,7 +61,7 @@
 </code></pre>
 	<h3 id="loadmaster">マスタデータを配置して再びReplaceSchema</h3>
 	<p>
-		<em class="smallmark">tutorial/material/dbflute/playsql-loaddata-common.zip</em> <span class="frm">(commonの方です)</span> を解凍して、<em class="smallmark">10-master.xls</em>
+		<em class="smallmark">tutorial/material/dbflute/playsql-loaddata-common.zip</em> <span class="frm">(commonの方です)</span> を解凍して、<em class="smallmark">.tsvファイルたち</em>
 		を、以下のように配置して、ReplaceSchemaを実行してください。
 	</p>
 <pre><span class="codetitle">e.g. マスタデータ用のエクセルファイルの配置場所 @Directory</span><code>
@@ -192,7 +192,7 @@ PROJECT_ROOT
 	<h2 id="testdata">テストデータの登録</h2>
 	<h3 id="loadtestdata">テストデータを配置して再びReplaceSchema</h3>
 	<p>
-		<em class="smallmark">tutorial/material/dbflute/playsql-loaddata-ut.zip</em> <span class="frm">(さっきと違ってこんどは ut の方です)</span> を解凍して、<em class="smallmark">20-member.xls</em> と <em class="smallmark">30-product.xls</em>
+		<em class="smallmark">tutorial/material/dbflute/playsql-loaddata-ut.zip</em> <span class="frm">(さっきと違ってこんどは ut の方です)</span> を解凍して、<em class="smallmark">.tsvファイルたち</em>
 		を、以下のように配置してください。
 	</p>
 <pre><span class="codetitle">e.g. テストデータ用のエクセルファイルの配置場所 @Directory</span><code>
