--- a/web/ja/tutorial/handson/section05.html
+++ b/web/ja/tutorial/handson/section05.html
@@ -156,7 +156,7 @@ select max(login.LOGIN_DATETIME)
 	</p>
 	<div class="relatedpage"><a href="../../manual/function/generator/task/replaceschema/takefinally.html">ReplaceSchema - 最終チェック</a></div>
 	<p>
-		[DBFluteクライアント]/playsql配下の cyclic_02_01-member.tsv
+		[DBFluteクライアント]/playsql配下の cyclic_02_01-MEMBER.tsv
 		にて、<em class="keyword">とある有効終了日が一つ後の有効期間の有効開始日を超える日</em>
 		を指定して、ReplaceSchemaを実行してみましょう。
 		当然のことながら、正常に登録されてしまうはずです。
