about log security

--- a/web/ja/manual/function/genbafit/runtimefit/exceptionhandling/index.html
+++ b/web/ja/manual/function/genbafit/runtimefit/exceptionhandling/index.html
@@ -89,6 +89,7 @@
 	</p>
 
 	<h2 id="appdata">例外メッセージのアプリデータ</h2>
+	<h3 id="fordebug">本番トラブルのデバッグのために</h3>
 	<p>
 		DBFluteが発生させる例外メッセージ(主にSQLの例外)には、デバッグ作業の効率化のために、アプリデータを含むことがあります。
 		例えば、登録処理で一意制約違反が発生したときには、EntityAlreadyExistsException
@@ -100,8 +101,12 @@
 		における不具合の対応においてこそ重宝します。
 		もし、(本番環境で)何のデータで発生した登録エラーなのかどうかがわからなかったら、問題に直面している人は途方に暮れるでしょう。
 	</p>
+	<h3 id="kojinjoho">でも個人情報はログに出ちゃってもいいの？</h3>
 	<p>
-		ただし、以下の項目を <em class="keyword">両方とも</em> 満たすようなシステム状況においては、ちょっと注意が必要です。
+		ただし、個人情報がログに出力されてしまうことを懸念される場合もあるでしょう。
+	</p>
+	<p>
+		その対応案をいくつか列挙します。
 	</p>
 	<dl class="textlist">
 		<dt>機密性の高い情報が暗号化されていない</dt>
@@ -109,24 +114,36 @@
 		<dt>ログ出力先のセキュリティ管理の信用度が低い <span class="frm">(誰でもログを見れてしまうなど)</span></dt>
 		<dd>ログ出力先(例えば、ログファイル)の、インフラ的なセキュリティ管理の信用度が低く、機密性の高い情報を暗号化せずに出力することが認められていない。</dd>
 	</dl>
+	<h3 id="authlog">A. 本番環境のログ閲覧は権限管理</h3>
 	<p>
-		この両方を満たすような状況、そもそもこのような状況自体が推奨されません。
-		機密性が高いのであれば、DB上でも暗号化されていた方が安全でしょう。
-		また、ログファイルもサーバ上で(閲覧する際の手順も含めて)厳密に権限管理されるべきでしょう。
-		ただ、どうしても上記のような状況になってしまった場合のために、幾つかの対策が考えられます。
+		そもそも本番環境のログが "誰でも見られる状態" になっていると問題になりやすいとは思います。
+		なので、そもそも本番ログはしっかり権限管理して "特定の人だけ見ることができる" という状況が望ましいでしょう。
 	</p>
-	<h3 id="cipher">A. 本番環境のログを暗号化して出力</h3>
 	<p>
-		例外メッセージにアプリデータを含めているのでは DBFlute だけとは限りません。<em class="keyword">アプリ自体が例外メッセージにアプリデータを含めている可能性</em>
-		は十分にあります。なので、本番環境のログ自体を暗号化して出力するようにすることが一番です。
+		仮にログに個人情報が入らないようにしたとしても、ログはシステムの構造的な情報などを持っていますから、
+		そもそもむやみに誰でも見られるようにはしない方が良いでしょう。
+	</p>
+	<p>
+		本番DBと同じように扱うと考えると良いでしょう。本番DBを見ることができる人は限られているかと思います。
+		もし、本番DB上の個人情報が暗号化されていないのであれば、元々特定の人には個人情報を閲覧することができてしまうわけです。
+		それが業務上許されているのであれば、そのくらいのセキュリティポリシーということなので、本番ログもそれと同じ扱いで考えれば良いということになります。
+		<span class="frm">(もっとセキュアにしないといけないような情報であれば、そもそもDB上で暗号化が求められるはずで)</span>
+	</p>
+	<h3 id="cipherlog">B. 本番環境のログを暗号化して出力</h3>
+	<p>
+		例外メッセージにアプリデータを含めているのは DBFlute だけとは限りません。<em class="keyword">アプリ自体が例外メッセージにアプリデータを含めている可能性</em>
+		は十分にあります。そういった "紛れ" を100%払拭するのはほぼ不可能に近いと思われます。
+	</p>
+	<p>
+		なので、本番環境のログ自体を暗号化して出力するようにすることが一番です。
 	</p>
 	<p>
 		例えば、Logback や Log4j の独自の Appender を作成して暗号化してからログに出力するような仕組みを本番環境にだけ設定するのも手段の一つですし、インフラの仕組みで自動でログファイルが暗号化されるようにするのも手段の一つでしょう。
 		もちろん、暗号キーは厳密に管理する必要があります。
 	</p>
-	<h3 id="mask">B. (せめて)DBFluteの例外メッセージをマスク</h3>
+	<h3 id="masklog">C. (せめて)DBFluteの例外メッセージをマスク</h3>
 	<p>
-		"A" もどうしてもできないという状況の場合(基本的に推奨されません)、もしくは、暗号化した情報ですらログに出力するのが認められていない場合、
+		"A" や "B" をどうしてもできないという状況の場合(基本的に推奨されません)、もしくは、暗号化した情報ですらログに出力するのが認められていない場合、
 		アプリ実装自体が例外に含めているアプリデータに関してはここで議論しようがないので省略させて頂きますが、せめて、DBFlute
 		の例外メッセージをマスクすると言った場合に、以下の方法で実現できます。
 	</p>
@@ -174,12 +191,6 @@
 		<li>(アプリが)埋め込み変数コメントなどでSQL自体にアプリデータを埋め込んでる可能性</li>
 		<li>JDBCドライバの例外メッセージにアプリデータが含まれている可能性(JDBCドライバ次第)</li>
 	</ul>
-
-	<h2 id="example">Exampleのススメ</h2>
-	<p>
-		dbflute-ymir-example では、Ymir の仕組みに従って、DBFluteの(主に排他制御の)例外がハンドリングされるようになっています。
-	</p>
-	<div class="detailpage"><a href="../../../../reference/example/index.html#friends">DBFlute Example - 他のフレームワーク</a></div>
 <!-- __content-end__ --></div></div>
 
 <div id="sidebar">
