revive slack registration

--- a/web/ja/manual/topic/office/feedback.html
+++ b/web/ja/manual/topic/office/feedback.html
@@ -41,19 +41,16 @@
 		DBFluteユーザの集いで投稿するときは、Google Group に入会をお願いします。
 	</p>
 	<div class="relatedpage"><a href="https://groups.google.com/g/dbflute/">DBFluteユーザの集い | Google Group</a></div>
-	<!-- slack edition headache and heroku headache so...
 	<h3 id="dbfluteslack">チャット (DBFlute Slack)</h3>
 	<p>
 		気軽にチャットで質問や相談などができる <em class="mark">公開Slack</em> がありますので、ぜひご利用ください。
-		<span class="frm">(Slack登録ページで、自身のメールアドレスと登録トークンを入力すると招待メールが送信されます)</span>
 	</p>
 	<dl class="valuemainlist">
-		<dt>Slack登録ページ</dt><dd><a href="https://dbflute-slack-invitation.herokuapp.com">https://dbflute-slack-invitation.herokuapp.com</a></dd>
-		<dt>Slack登録トークン</dt><dd>"海" の英単語を小文字三文字で</dd>
-		<dt>Slack自体のURL</dt><dd><a href="https://dbflute.slack.com/messages/">https://dbflute.slack.com/messages/</a></dd>
+		<dt>登録ページ</dt><dd><a href="https://dbflute.slack.com/join/shared_invite/zt-32ngi4h5j-6Q_RP_G3u9Wi7Qq0tuEhrw#/shared-invite/email">DBFlute Slack に参加するためのページ</a></dd>
+		<dt>参加手順</dt><dd>↑のページより何かしらの方法でログイン登録をする</dd>
 	</dl>
 	<p>
-		そして、いくつかのチャンネルが用意されています。
+		いくつかのSlackチャンネルが用意されています。
 	</p>
 	<dl class="keymainlist">
 		<dt>#dbflute_users_ja</dt><dd>DBFluteユーザー向け、質問・相談Welcome <span class="frm">(メインチャンネル)</span></dd>
@@ -66,7 +63,6 @@
 	<p>
 		※仕組み的に <em class="keyword">誰でも閲覧できるチャット</em> になりますので、それを前提に投稿をお願いします。将来はチャットの内容をサイトで自動公開できるようにしたいとも考えています。ゆえに "公開Slack" と銘打っています。
 	</p>
-	 -->
 	<h3 id="twitter">Twitter (jflute)</h3>
 	<p>
 		Twitterでもフィードバックを受け付けています<span class="frm">(もしくは、TwitterでDBFluteについてつぶやいたら、何か反応させて頂くかもしれません)</span>。
