--- a/web/ja/lastaflute/howto/upgrade/lachangelog.html
+++ b/web/ja/lastaflute/howto/upgrade/lachangelog.html
@@ -29,6 +29,17 @@
 	${indexlist}
 
       <div class="release">
+        <h2>LastaFlute-1.2.8</h2>
+        <p class="releas5date">2025/04/02</p>
+        <div class="new">
+          <h3>NEW</h3>
+          <ul>
+            <li>upgrade Gson to 2.12.2</li>
+            <li>support, mask JSON on RequestBody #92</li>
+          </ul>
+        </div>
+      </div>
+      <div class="release">
         <h2>LastaFlute-1.2.7</h2>
         <p class="releas5date">2024/06/30</p>
         <div class="new">
