about decomment commit flow

--- a/web/ja/manual/function/generator/intro/decomment.html
+++ b/web/ja/manual/function/generator/intro/decomment.html
@@ -144,7 +144,7 @@
 	<h3 id="conflictconcept">gitコンフリクトはせず業務的なコンフリクト</h3>
 	<p>
 		同じテーブル同じカラムのコメントを複数人で同時に修正しても、gitコンフリクトはしないように作られていますが、
-		(当然のことながら)業務的なコンフリクトは発生します。
+		(当然のことながら)業務的なコンフリクトが発生します。
 	</p>
 	<h3 id="conflictexp">SchemaHTML上でコンフリクトの表現</h3>
 	<p>
@@ -162,6 +162,36 @@
 		クリックすれば、同じようにダイアログが開き、同じ要領でそのままコンフリクトしたコメントを修正することができます。
 		<span class="frm">(自動マージは一切されず、必ず人間が目で見て修正する方式です)</span>
 	</p>
+
+	<div class="inucolumn">
+		<h2 id="topicpiece">どのブランチでpieceをコミットする？</h2>
+		<h3 id="topiccommit">トピックブランチでコミットが推奨</h3>
+		<p>
+			DBFluteとしては、トピックブランチで本業務の修正と混ぜてpieceファイルをgitにコミットすることを推奨しています。
+			<span class="frm">(チケットブランチと呼ぶこともあるでしょう)</span>
+		</p>
+		<h3 id="decommentcommitflow">decommentコミットの流れ</h3>
+		<ol>
+			<li>トピックブランチで作業中に気軽にdecomment (pieceファイルが作成される)</li>
+			<li>トピックブランチで本業務の修正ファイルと一緒にgitにコミット</li>
+			<li>プルリクでレビューされたら本線ブランチにマージ</li>
+			<li>(いつかDB変更の時にdocタスクが実行されてplainなSchemaHTMLに組み込まれる)</li>
+		</ol>
+		<h3 id="decommenteasy">気軽に登録できることが大切</h3>
+		<p>
+			decomment専用のブランチにしない理由は、<em class="keyword">気軽にDBコメントを改善していける環境</em> が大切だと考えるからです。
+			専用ブランチとか言い始めるとそれだけで足が重くなってやらなくなってしまいがちなので、<em class="mark">パッと書いてパッとコミットしちゃう</em>
+			ができる方が現実的だと思うからです。
+		</p>
+		<p>
+			そのために、gitコンフリクトが起きないような仕組みにして、本業務のマージに支障が発生しないようにしているわけです。
+		</p>
+		<p>
+			pieceファイルがプルリクに混じっても困ることはほぼないので、気にせず <em class="mark">混ぜコミット</em>
+			して、DBコメントを充実させていって欲しいと思います。
+			<span class="frm">(レビューワーにこのファイルは何？と聞かれたら、このページを見せてあげてください)</span>
+		</p>
+	</div>
 
 	<h2 id="cabomapping">テーブル名が変更されるとどうなる？</h2>
 	<h3 id="notabledecomment">一時的に、存在しないテーブルへのデコメント</h3>
