--- a/web/ja/environment/changelog/index.html
+++ b/web/ja/environment/changelog/index.html
@@ -33,6 +33,15 @@
         <div class="new">
           <h3>NEW</h3>
           <ul>
+            <li>DBFlute Engine: ReplaceSchema TSV, isAvailableAddingSchemaToTableSqlName #233 <span class="frm">*2025/04/28パッチ</span></li>
+            <li>DBFlute Engine: LoadDataReverse, isIncludeAdditionalSchema #232 <span class="frm">*2025/04/28パッチ</span></li>
+            <li>DBFlute Engine: ReplaceSchema, loading TSV with schema prefix #231 <span class="frm">*2025/04/28パッチ</span></li>
+            <li>DBFlute Engine: Oracle Procedure (function), return property name "arg1" to "returnValue" #230 <span class="frm">*2025/04/23パッチ</span></li>
+            <li>DBFlute Engine: pointTypeMapping for Sql2Entity, "procedure:" prefix #229 <span class="frm">*2025/04/23パッチ</span></li>
+            <li>DBFlute Engine: Oracle, procedure parameter like e.g. MAIHAMA.SEA_ID%TYPE #228 <span class="frm">*2025/04/23パッチ</span></li>
+            <li>DBFlute Engine: procedureParameterPointJdbcTypeMappingMap on outsideSqlMap.dfprop #227 <span class="frm">*2025/04/23パッチ</span></li>
+            <li>DBFlute Engine: typeMappingMap's pointTypeMapping for Sql2Entity #226 <span class="frm">*2025/04/23パッチ</span></li>
+            <li>DBFlute Engine: Oracle, DisplaySqlBuilder's logDateFormat as timestamp is unneeded #225 <span class="frm">*2025/04/23パッチ</span></li>
             <li>DBFlute Engine: additionalDbComment, $$schema$$ #219 <span class="frm">*2024/10/12パッチ</span></li>
             <li>DBFlute Engine: additionalDbCommentMap.dfprop #218 <span class="frm">*2024/10/11パッチ</span></li>
             <li>DBFlute Engine: LoadDataReverse, support sectionTableGuidelineLimit #216 <span class="frm">*2024/10/06パッチ</span></li>
