--- a/web/index.ja.html
+++ b/web/index.ja.html
@@ -29,6 +29,7 @@
 		<div id="leftpart">
 			<h2>News</h2>
 			<ul>
+				<li><span class="date">2025/05/23</span>DBFlute-1.2.9 (Java8対応) をリリースしました。</li>
 				<li><span class="date">2024/03/19</span>DBFlute-1.2.8 (Java8対応) をリリースしました。</li>
 				<li><span class="date">2023/10/12</span><a href="https://jflute.hatenadiary.jp/entry/20240321/release127">DBFlute-1.2.7 (Java8対応)</a> をリリースしました。</li>
 				<li><span class="date">2022/05/08</span><a href="https://jflute.hatenadiary.jp/entry/20220508/release126">DBFlute-1.2.6 (Java8対応)</a> をリリースしました。</li>
