--- a/web/ja/environment/changelog/index.html
+++ b/web/ja/environment/changelog/index.html
@@ -28,6 +28,38 @@
 	${indexlist}
 
       <div class="release">
+        <h2>DBFlute-1.2.9 <span class="frm">※Java8</span></h2>
+        <p class="releasedate">2025/05/23</p>
+        <div class="new">
+          <h3>NEW</h3>
+          <ul>
+            <li>DBFlute Runtime: UpdateOption@disableOptimisticLockAutoUpdate() #235</li>
+            <li>DBFlute Runtime: FileToken performance, like ReplaceSchema LoadData #234</li>
+            <li>DBFlute Engine: ReplaceSchema TSV, isAvailableAddingSchemaToTableSqlName #233 <span class="frm">*前回パッチ</span></li>
+            <li>DBFlute Engine: LoadDataReverse, isIncludeAdditionalSchema #232 <span class="frm">*前回パッチ</span></li>
+            <li>DBFlute Engine: ReplaceSchema, loading TSV with schema prefix #231 <span class="frm">*前回パッチ</span></li>
+            <li>DBFlute Engine: Oracle Procedure (function), return property name "arg1" to "returnValue" #230 <span class="frm">*前回パッチ</span></li>
+            <li>DBFlute Engine: pointTypeMapping for Sql2Entity, "procedure:" prefix #229 <span class="frm">*前回パッチ</span></li>
+            <li>DBFlute Engine: Oracle, procedure parameter like e.g. MAIHAMA.SEA_ID%TYPE #228 <span class="frm">*前回パッチ</span></li>
+            <li>DBFlute Engine: procedureParameterPointJdbcTypeMappingMap on outsideSqlMap.dfprop #227 <span class="frm">*前回パッチ</span></li>
+            <li>DBFlute Engine: typeMappingMap's pointTypeMapping for Sql2Entity #226 <span class="frm">*前回パッチ</span></li>
+            <li>DBFlute Engine: Oracle, DisplaySqlBuilder's logDateFormat as timestamp is unneeded #225 <span class="frm">*前回パッチ</span></li>
+            <li>DBFlute Engine: additionalDbComment, $$schema$$ #219 <span class="frm">*前回パッチ</span></li>
+            <li>DBFlute Engine: additionalDbCommentMap.dfprop #218 <span class="frm">*前回パッチ</span></li>
+            <li>DBFlute Engine: LoadDataReverse, support sectionTableGuidelineLimit #216 <span class="frm">*前回パッチ</span></li>
+            <li>DBFlute Engine: LoadDataReverse's isOverrideExistingDataFile for TSV #213 <span class="frm">*前回パッチ</span></li>
+            <li>DBFlute Engine: LoadDataReverse's isDelimiterDataBasis #214 <span class="frm">*前回パッチ</span></li>
+            <li>DBFlute Engine: improve Final Message to show JDBC driver version #211 <span class="frm">*前回パッチ</span></li>
+            <li>DBFlute Engine: non-SQLException handling for Procedure meta data #209 <span class="frm">*前回パッチ</span></li>
+            <li>DBFlute Engine: Sql2Entity procedure error on mysql-8.0.x and jdbc-8.0.x #208 <span class="frm">*前回パッチ</span></li>
+            <li>DBFlute Engine: LoadDataReverse, option of TSV (delimiter data) minimally quoted #205 <span class="frm">*前回パッチ</span></li>
+          </ul>
+          <h3>BUG</h3>
+          <ul>
+          </ul>
+        </div>
+      </div>
+      <div class="release">
         <h2>DBFlute-1.2.8 <span class="frm">※Java8</span></h2>
         <p class="releasedate">2024/03/19</p>
         <div class="new">
