about deployment short

--- a/web/ja/tutorial/handson/section04.html
+++ b/web/ja/tutorial/handson/section04.html
@@ -197,6 +197,9 @@
     ; PURCHASE_PAYMENT = <span class="keyword">map:</span>{PAYMENT_METHOD_CODE=PaymentMethod}
  <span class="abbreviation">...</span>
 </code></pre>
+	<p>
+		<span class="frm">(↑のDeployment設定、実は抜けてる区分値があるのですが...)</span>
+	</p>
 	<h3 id="clsimpl">区分値メソッドを使って実装</h3>
 	<p>
 		それでは、区分値メソッドを大いに活用して、以下のテストを作成してください。
