about convertValueMap.dataprop

--- a/web/ja/manual/function/generator/task/replaceschema/loadxls.html
+++ b/web/ja/manual/function/generator/task/replaceschema/loadxls.html
@@ -314,6 +314,10 @@ data-directory: playsql/data/ut/xls
 			</ul>
 		</dd>
 	</dl>
+	<p>
+		ちなみに、TSVなどデリミターデータの場合は convertValueMap.dataprop でこの機能を代替することができます。
+	</p>
+	<div class="detailpage"><a href="./convertvalue.html">値のコンバート設定 (convertValueMap.dataprop)</a></div>
 
 	<h2 id="skipsheet">エクセルデータのシートのスキップ</h2>
 	<p>
