--- a/web/ja/environment/changelog/index.html
+++ b/web/ja/environment/changelog/index.html
@@ -33,6 +33,8 @@
         <div class="new">
           <h3>NEW</h3>
           <ul>
+            <li>DBFlute Engine: convertValueMap.dataprop, can specify tableName prefix #248 <span class="frm">*2025/06/24パッチ</span></li>
+            <li>DBFlute Engine: SchemaPolicyCheck, improve various feedbacks #244 <span class="frm">*2025/06/24パッチ</span></li>
             <li>DBFlute Runtime: UpdateOption@disableOptimisticLockAutoUpdate() #235</li>
             <li>DBFlute Runtime: FileToken performance, like ReplaceSchema LoadData #234</li>
             <li>DBFlute Engine: ReplaceSchema TSV, isAvailableAddingSchemaToTableSqlName #233 <span class="frm">*前回パッチ</span></li>
