--- a/web/ja/environment/changelog/index.html
+++ b/web/ja/environment/changelog/index.html
@@ -33,6 +33,13 @@
         <div class="new">
           <h3>NEW</h3>
           <ul>
+            <li>DBFlute Engine: LoadDataReverse, tableTargetList #252 <span class="frm">*2025/06/29パッチ</span></li>
+            <li>DBFlute Engine: LoadDataReverse, tableTargetList #252 <span class="frm">*2025/06/29パッチ</span></li>
+            <li>DBFlute Engine: SchemaSyncCheck, talbeExceptList #252 <span class="frm">*2025/06/29パッチ</span></li>
+            <li>DBFlute Engine: LoadDataReverse,isFrameworkDebug for e.g. table order #252 <span class="frm">*2025/06/29パッチ</span></li>
+            <li>DBFlute Engine: PropertiesHTML, isSuppressPropertiesHtmlGenerateForcedly #251 <span class="frm">*2025/06/29パッチ</span></li>
+            <li>DBFlute Engine: SchemaSyncCheck, ignore diff pieces #250 <span class="frm">*2025/06/29パッチ</span></li>
+            <li>DBFlute Engine: LoadDataReverse, improve table order when cyclic reference exists #249 <span class="frm">*2025/06/29パッチ</span></li>
             <li>DBFlute Engine: convertValueMap.dataprop, can specify tableName prefix #248 <span class="frm">*2025/06/24パッチ</span></li>
             <li>DBFlute Engine: SchemaPolicyCheck, improve various feedbacks #244 <span class="frm">*2025/06/24パッチ</span></li>
             <li>DBFlute Runtime: UpdateOption@disableOptimisticLockAutoUpdate() #235</li>
