ERFlute, Eclipse-202506 crisys

--- a/web/ja/manual/function/helper/erflute/index.html
+++ b/web/ja/manual/function/helper/erflute/index.html
@@ -188,6 +188,15 @@
 	<p class="imgbox">図 : GEFの内訳を選択 (Draw2d と Zest を除外)
 		<a href="../../../../../data/snapshot/helper/erflute/erflute-install-supplement-updatesite-waste-snapshot.png" title="GEFの内訳を選択"><img src="../../../../../data/snapshot/helper/erflute/erflute-install-supplement-updatesite-waste-snapshot.png" alt="GEFの内訳を選択" width="550" height="300" /></a>
 	</p>
+	<h3 id="eclipse202506">Eclipse-202506以降で動かないかもしれない</h3>
+	<p>
+		Eclipse-202506以降において、GEFがインストールできない現象が報告されています。
+		<span class="frm">(解決策、回避策があるかどうかはまだ定かではありません)</span>
+	</p>
+	<div class="relatedpage"><a href="https://github.com/dbflute-session/erflute/issues/54">[Crisis] Eclipse-202506 でGEFがインストールできない | Githuv</a></div>
+	<p>
+		Eclipse-202406 であれば、GEFがインストールできてERFluteは正常に動作しています。
+	</p>
 
 	<h2 id="howto">ERFluteの使い方</h2>
 	<p>
