File - (Manage IDE Settings) - Import Setttings...

--- a/web/ja/tutorial/onjava8.html
+++ b/web/ja/tutorial/onjava8.html
@@ -722,7 +722,7 @@ memberList.forEach(<span class="subpoint">member -&gt; {</span> <span class="com
 		同じテンプレートが、IntelliJ IDEA でも使えます！
 	</p>
 	<p>
-		メニューの File - Import Setttings... で以下の jar ファイルを指定して <em class="keyword">Live Templates だけ選択して</em> import すれば利用できます。
+		メニューの File - (Manage IDE Settings) - Import Setttings... で以下の jar ファイルを指定して <em class="keyword">Live Templates だけ選択して</em> import すれば利用できます。
 		<span class="frm">(Live Templates 以外を選択すると、ご自身の設定が上書きされる可能性があります)</span>
 	</p>
 	<dl class="longvaluemainlist">
