IntelliJ, live template, use zip

--- a/web/ja/manual/topic/friends/intellij/index.html
+++ b/web/ja/manual/topic/friends/intellij/index.html
@@ -369,12 +369,15 @@
 	</p>
 	<div class="relatedpage"><a href="../../../../tutorial/onjava8.html#jflutableeclipse">DBFlute補完テンプレートを入れたEclipse</a></div>
 	<p>
-		メニューの File - Import Setttings... で以下の jar ファイルを指定して <em class="keyword">Live Templates だけ選択して</em> import すれば利用できます。
-		<span class="frm">(Live Templates 以外を選択すると、ご自身の設定が上書きされる可能性があります)</span>
+		以下のzipファイルをダウンロードしてzip解凍すると、補完テンプレートの設定が入ったjarファイルがあります。
 	</p>
 	<dl class="longvaluemainlist">
-		<dt>補完テンプレート</dt><dd><a href="http://dbflute.seasar.org/download/misc/settings/dbflute-intellij-live-templates.jar">dbflute-intellij-live-templates.jar</a></dd>
+		<dt>補完テンプレート</dt><dd><a href="http://dbflute.seasar.org/download/misc/settings/dbflute-intellij-live-templates.zip">dbflute-intellij-live-templates.zip</a></dd>
 	</dl>
+	<p>
+		IntelliJでのメニューの File - (Manage IDE Settings) - Import Setttings... で、その jar ファイルを指定して <em class="keyword">Live Templates だけ選択して</em> import すれば利用できます。
+		<span class="frm">(注意: Live Templates 以外を選択すると、ご自身の設定が上書きされる可能性があります)</span>
+	</p>
 	<p>
 		裏技は使えませんが、アンスコで始まる系の補完はほとんどそのまま利用できます。_ll, _li
 		をぜひ活用していきましょう！Eclipseよりも使いやすくなっている部分もあります。
