migrate dbflute-intellij-live-templates.jar to github

--- a/web/ja/lastaflute/tutorial/laimpl.html
+++ b/web/ja/lastaflute/tutorial/laimpl.html
@@ -154,7 +154,7 @@
 	</p>
 	<div class="relatedpage"><a href="../../tutorial/onjava8.html#intellij">さあ、補完してみよう！ - IntelliJ IDEA なら</a></div>
 	<dl class="shortkeymainlist">
-		<dt>補完テンプレート</dt><dd><a href="http://dbflute.seasar.org/download/misc/settings/dbflute-intellij-live-templates.zip">dbflute-intellij-live-templates.zip</a> <span class="frm">(既存設定を残しつつそのままImport)</span></dd>
+		<dt>補完テンプレート</dt><dd><a href="https://dbflute.org/meta/friends/intellij/dbflute-intellij-live-templates.jar">dbflute-intellij-live-templates.jar</a> <span class="frm">(既存設定を残しつつそのままImport)</span></dd>
 	</dl>
 	<h3 id="othererd">ERDツールは別のでもOK</h3>
 	<p>
