--- a/web/ja/manual/topic/friends/intellij/index.html
+++ b/web/ja/manual/topic/friends/intellij/index.html
@@ -369,10 +369,11 @@
 	</p>
 	<div class="relatedpage"><a href="../../../../tutorial/onjava8.html#jflutableeclipse">DBFlute補完テンプレートを入れたEclipse</a></div>
 	<p>
-		以下のzipファイルをダウンロードしてzip解凍すると、補完テンプレートの設定が入ったjarファイルがあります。
+		まず、以下のjarファイルをダウンロードしましょう。
+		<span class="frm">(Google Chromeの場合、クリックしても反応しないなど、ダウンロードがブロックされる可能性があるようです。リンクのアドレスをコピーしてアドレスバーで直接指定するか...他のブラウザでダウンロードするか...何かしら工夫を)</span>
 	</p>
 	<dl class="longvaluemainlist">
-		<dt>補完テンプレート</dt><dd><a href="http://dbflute.seasar.org/download/misc/settings/dbflute-intellij-live-templates.zip">dbflute-intellij-live-templates.zip</a></dd>
+		<dt>補完テンプレート</dt><dd><a href="https://dbflute.org/meta/friends/intellij/dbflute-intellij-live-templates.jar">dbflute-intellij-live-templates.jar</a></dd>
 	</dl>
 	<p>
 		IntelliJでのメニューの File - (Manage IDE Settings) - Import Setttings... で、その jar ファイルを指定して <em class="keyword">Live Templates だけ選択して</em> import すれば利用できます。
