--- a/web/ja/tutorial/onjava8.html
+++ b/web/ja/tutorial/onjava8.html
@@ -722,13 +722,14 @@ memberList.forEach(<span class="subpoint">member -&gt; {</span> <span class="com
 		同じテンプレートが、IntelliJ IDEA でも使えます！
 	</p>
 	<p>
-		以下のzipファイルをダウンロードしてzip解凍すると、補完テンプレートの設定が入ったjarファイルがあります。
+		まず、以下のjarファイルをダウンロードしましょう。
+		<span class="frm">(Google Chromeの場合、クリックしても反応しないなど、ダウンロードがブロックされる可能性があるようです。リンクのアドレスをコピーしてアドレスバーで直接指定するか...他のブラウザでダウンロードするか...何かしら工夫を)</span>
 	</p>
 	<dl class="longvaluemainlist">
-		<dt>補完テンプレート</dt><dd><a href="http://dbflute.seasar.org/download/misc/settings/dbflute-intellij-live-templates.zip">dbflute-intellij-live-templates.zip</a></dd>
+		<dt>補完テンプレート</dt><dd><a href="https://dbflute.org/meta/friends/intellij/dbflute-intellij-live-templates.jar">dbflute-intellij-live-templates.jar</a></dd>
 	</dl>
 	<p>
-		IntelliJでのメニューの File - (Manage IDE Settings) - Import Setttings... で、その jar ファイルを指定して <em class="keyword">Live Templates だけ選択して</em> import すれば利用できます。
+		IntelliJでのメニューの File - (Manage IDE Settings) - Import Settings... で、その jar ファイルを指定して <em class="keyword">Live Templates だけ選択して</em> import すれば利用できます。
 		<span class="frm">(注意: Live Templates 以外を選択すると、ご自身の設定が上書きされる可能性があります)</span>
 	</p>
 	<p>
